# rag-search

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.yml  file_downloader.py  main.py  package.json  pyproject.toml  visualize_graph.py
.claude/rules/: ultracite.md  uv.md  web-interface-guideline.md
.claude/skills/creative-strategist/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.claude/skills/ui-skills/: SKILL.md
api/: server.py
backend/: .dockerignore  Dockerfile  README.md  main.py  test_langgraph.py  test_query.py  visualize_graph.py
backend/api/: server.py
backend/archived/: parser.py
backend/cli/: ingest.py  langgraph_pipeline.py  pipeline.py  preprocess_tables.py  query.py  retrievers.py
backend/cli/langgraph/: __init__.py  checkpointer.py  graph.py  nodes.py  (+2 more)
backend/database/: dependencies.py
backend/db/: dependencies.py
backend/notebooks/: finetuning_embeddding_models.ipynb  finetuning_embeddding_models_from_collab.ipynb
backend/observability/: tracer.py
backend/prompts/: system_prompt.py
cli/: extraction.py  generators.py  ingest.py  langgraph_pipeline.py  pipeline.py  pipeline_legacy.py  preprocess_tables.py  query.py  retrievers.py
cli/langgraph/: graph.py  state.py
db/: vector_db.py
frontend/: Dockerfile  components.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Providers.tsx
frontend/hooks/: useSSEQuery.ts
frontend/lib/: api.ts  config.ts  markdown-config.tsx  sse.ts  types.ts
notebooks/: finetuning_embeddding_models.ipynb
observability/: tracer.py
(+13 files in other folders)
