[project]
name = "agent-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "ipython>=9.9.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "langchain[openai]>=1.2.7",
    "langgraph>=1.0.7",
    "pymupdf>=1.26.7",
]
