[project]
name = "rag-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.1",
    "fastapi>=0.115.0",
    "ipython>=9.9.0",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "langchain[openai]>=1.2.7",
    "langgraph>=1.0.7",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=5.2.3",
    "transformers==5.0.0",
    "uvicorn[standard]>=0.30.0",
]
